# phitodo-python

./: README.md  pyproject.toml
phitodo/: __init__.py  __main__.py  app.py
phitodo/css/: app.tcss
phitodo/domain/: __init__.py  enums.py  filters.py  models.py
phitodo/repository/: __init__.py  sqlite_repository.py
phitodo/screens/: __init__.py  anytime.py  completed.py  github.py  inbox.py  project.py  review.py  settings.py  tag.py  today.py  toggl.py  upcoming.py
phitodo/services/: __init__.py  github_service.py  review_service.py  task_service.py  toggl_service.py
phitodo/state/: __init__.py  app_state.py
phitodo/utils/: __init__.py  config.py  date_format.py  standup_report.py
phitodo/widgets/: __init__.py  github_column.py  project_modal.py  search_modal.py  sidebar.py  standup_modal.py  task_detail.py  task_item.py  task_list.py  task_modal.py  toggl_entry_list.py  toolbar.py
phitodo/widgets/charts/: __init__.py  duration_by_day.py  project_distribution.py
tests/: __init__.py  test_filters.py  test_models.py  test_services.py
